Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,20 +1,18 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7856450349:AAFr5dXOmc6vLO6wHPlLg_eym0Q6q3asTlM"                              # Require restart after changing it while bot running
+OWNER_ID = "1491400016"                               # Require restart after changing it while bot running
+TELEGRAM_API = "12553805"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "600346f70ed43ebf3a873c755d022503"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002366590970"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
-STATUS_LIMIT = "4"
+STATUS_LIMIT = "50"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
@@ -58,10 +56,10 @@ UPGRADE_PACKAGES = ""
 
 # Leech & Mirror
 LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = "False"
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-CAP_FONT = "code"
+CAP_FONT = "Bold"
 LEECH_FILENAME_PREFIX = ""
 LEECH_FILENAME_SUFFIX = ""
 LEECH_FILENAME_CAPTION = ""
@@ -71,8 +69,8 @@ MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
+LEECH_LOG_ID = "-1001654008278"
+MIRROR_LOG_ID = "-1001654008278"
 LINKS_LOG_ID = ""
 
 # qBittorrent/Aria2c
@@ -87,7 +85,7 @@ QUEUE_DOWNLOAD = ""
 QUEUE_UPLOAD = ""
 
 # RSS
-RSS_DELAY = "600"
+RSS_DELAY = "300"
 RSS_CHAT = ""
 
 # Mega
@@ -95,18 +93,18 @@ MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 
 # Limits
-DAILY_TASK_LIMIT = ""
+DAILY_TASK_LIMIT = "Unlimited"
 DAILY_MIRROR_LIMIT = ""
-DAILY_LEECH_LIMIT = ""
-USER_MAX_TASKS = ""
-BOT_MAX_TASKS = ""
-TORRENT_LIMIT= ""
-DIRECT_LIMIT = ""
-GDRIVE_LIMIT = ""
-CLONE_LIMIT = ""
-YTDLP_LIMIT = ""
+DAILY_LEECH_LIMIT = "Unlimited"
+USER_MAX_TASKS = "20"
+BOT_MAX_TASKS = "20"
+TORRENT_LIMIT= "Unlimited"
+DIRECT_LIMIT = "Unlimited"
+GDRIVE_LIMIT = "Unlimited"
+CLONE_LIMIT = "Unlimited"
+YTDLP_LIMIT = "Unlimited"
 PLAYLIST_LIMIT = ""
-LEECH_LIMIT = ""
+LEECH_LIMIT = "Unlimited"
 MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 USER_TIME_INTERVAL = "0"
@@ -117,9 +115,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "WZ-M/L-X"
+TITLE_NAME = "ADMIN"
 AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/VJ_Botz"
+AUTHOR_URL = "http://t.me/Jailadmin_bot"
 COVER_IMAGE = ""
 
 # Extra
