--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ TELEGRAM_HASH = "600346f70ed43ebf3a873c755d022503"                          # Re
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://mkxcloud46:NmJfKIiFt1FrrVCs@cluster0.xoxhl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-1002366590970"                       # Require restart after changing it while bot running
