--- a/config.env
+++ b/config.env
@@ -1,15 +1,15 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "7856450349:AAFr5dXOmc6vLO6wHPlLg_eym0Q6q3asTlM"                              # Require restart after changing it while bot running
-OWNER_ID = "1491400016"                               # Require restart after changing it while bot running
-TELEGRAM_API = "12553805"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "600346f70ed43ebf3a873c755d022503"                          # Require restart after changing it while bot running
+BOT_TOKEN = ""                              # Require restart after changing it while bot running
+OWNER_ID = ""                               # Require restart after changing it while bot running
+TELEGRAM_API = ""                           # Require restart after changing it while bot running
+TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://mkxcloud46:NmJfKIiFt1FrrVCs@cluster0.xoxhl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
+DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = "-1002366590970"                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "50"
@@ -117,7 +117,7 @@ MDL_TEMPLATE = ""
 # Telegraph
 TITLE_NAME = "ADMIN"
 AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "http://t.me/Jailadmin_bot"
+AUTHOR_URL = "http://t.me/"
 COVER_IMAGE = ""
 
 # Extra
